added job application functionality
