# backend/docs/swagger.json
@@ -4,6 +4,141 @@
         "contact": {}
     },
     "paths": {
+        "/api/applications": {
+            "post": {
+                "description": "Создает новый отклик на вакансию",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "applications"
+                ],
+                "summary": "Создать отклик",
+                "parameters": [
+                    {
+                        "description": "Данные отклика",
+                        "name": "application",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.CreateJobApplication"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Успешно создано",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Ошибка валидации",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/applications/{applicationId}": {
+            "delete": {
+                "description": "Удаляет отклик",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "applications"
+                ],
+                "summary": "Удалить отклик",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID отклика",
+                        "name": "applicationId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешно удалено",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/applications/{applicationId}/status": {
+            "put": {
+                "description": "Обновляет статус существующего отклика",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "applications"
+                ],
+                "summary": "Обновить статус отклика",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID отклика",
+                        "name": "applicationId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Новый статус",
+                        "name": "status",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешно обновлено",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Ошибка запроса",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/refresh-tokens": {
             "post": {
                 "description": "Обновление access и refresh токенов с использованием валидного refresh токена",
@@ -457,7 +592,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.UpdateJob"
+                            "$ref": "#/definitions/requests.UpdateJobRequest"
                         }
                     }
                 ],
@@ -519,19 +654,21 @@
                 }
             }
         },
-        "repository.UpdateJob": {
+        "requests.CreateJobApplication": {
             "type": "object",
+            "required": [
+                "companyId",
+                "status",
+                "studentId"
+            ],
             "properties": {
-                "description": {
+                "companyId": {
                     "type": "string"
                 },
-                "id": {
+                "status": {
                     "type": "string"
                 },
-                "location": {
-                    "type": "string"
-                },
-                "title": {
+                "studentId": {
                     "type": "string"
                 }
             }
@@ -540,12 +677,6 @@
             "type": "object",
             "properties": {
                 "description": {
-                    "type": "string"
-                },
-                "employerId": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "location": {
@@ -616,6 +747,20 @@
                     "type": "string"
                 },
                 "surname": {
+                    "type": "string"
+                }
+            }
+        },
+        "requests.UpdateJobRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
